# edision

./: .gitignore  CMakeLists.txt  README.md  build_android.sh  build_ios.sh  build_mac.sh
bak/: AudioCapture.cpp
device/: AudioCapture.cpp  AudioCapture.h  AudioDevice.cpp  AudioDevice.h  CMakeLists.txt  main.cpp
include/codec/: ICodec.h
include/common/: IAVDataObserver.h  IAVDataSink.h  IAVDataSource.h  IAVError.h  IAVFormat.h
include/devices/: IDevices.h
include/utils/: IFileSink.h
src/: CMakeLists.txt
src/InputDevice/: AudioDevice.cpp  AudioDevice.h
src/codec/: AudioEncoder.cpp  AudioEncoder.h  ICodec.cc  VideoEncoder.cpp  VideoEncoder.h
src/codec/base/: EncoderBase.cpp  EncoderBase.h  IEncoder.cpp  IEncoder.h
src/codec/ffmpeg/: FfmpegVideoEncoder.cc  FfmpegVideoEncoder.h
src/common/: AVConfig.cpp  AVConfig.h  AVError.h  AVGuard.cpp  AVGuard.h  IAVDataSource.cc  IAVFormat.cc
src/common/base/: AVDataSinkBase.h  AVDataSourceBase.h  AudioEncoder.cpp  AudioEncoder.h  IAVDataSink.h  IAVDataSource.h
src/core/: IEdisionCore.cpp  IEdisionCore.h
src/device/: AudioDevice.cpp  AudioDevice.h  VideoDevice.cpp  VideoDevice.h  main.cpp
src/device/base/: DeviceBase.cpp  DeviceBase.h  IDevice.cpp  IDevice.h
src/devices/: IDevices.cc
src/devices/ffmpeg/: FfmpegVideoRecorder.cc  FfmpegVideoRecorder.h
src/encoder/: AudioEncoder.cpp  AudioEncoder.h
src/format/: AVFormatBase.cpp  AVFormatBase.h  IAVFormat.cpp  IAVFormat.h
src/sample/: Info.plist  main.cpp
src/utils/: IFileSink.cc
test/: CMakeLists.txt  Info.plist  main.cc
utils/: CMakeLists.txt
utils/log/: MyLogger.cpp  MyLogger.h
utils/log/spdlog/: async_logger-inl.h  async_logger.h  common.h  logger-inl.h  logger.h  spdlog.h
utils/log/spdlog/details/: fmt_helper.h  os-inl.h  pattern_formatter-inl.h
utils/log/spdlog/sinks/: android_sink.h  ansicolor_sink-inl.h  base_sink.h  dup_filter_sink.h  stdout_sinks-inl.h  stdout_sinks.h  syslog_sink.h  systemd_sink.h
